--- a/server/package.json
+++ b/server/package.json
@@ -29,7 +29,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.17.1",
     "mongoose": "^7.4.4",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
