--- a/server/package.json
+++ b/server/package.json
@@ -11,10 +11,10 @@
     "start": "node ./app.js",
     "dev": "nodemon ./app.js",
     "lint": "eslint .",
-    "test": "cross-env-shell MONGODB_URI=mongodb://localhost:27017/serverTestDB \"npm run newman-server\"",
+    "test": "cross-env-shell MONGODB_URI=\"mongodb+srv://user1:1opzJUXiDnxP67vZ@cluster0.rwygtey.mongodb.net/Recipes4U?retryWrites=true&w=majority\" \"npm run newman-server\"",
     "ci-test": "npm run newman-server",
     "newman-server": "cross-env-shell PORT=3001 \"npm run dropdb && run-p --race start newman-wait\"",
-    "newman-wait": "wait-on http://localhost:3001/api && npm run newman",
+    "newman-wait": "wait-on http://localhost:3001/api/v1 && npm run newman",
     "newman": "newman run ./tests/server.postman_collection.json --env-var host=http://localhost:3001",
     "dropdb": "node ./tests/dropdb.js"
   },
