--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
   "scripts": {
     "postinstall": "npm install --prefix server && npm install --prefix client && npm run build --prefix client"
   },
-  "engines" : {
-    "npm" : "9.x",
+  "engines": {
+    "npm": "9.x",
     "node": "18.x"
+  },
+  "devDependencies": {
+    "node-sass": "^9.0.0",
+    "sass-loader": "^13.3.2"
   }
 }
