--- a/.gitignore
+++ b/.gitignore
@@ -174,4 +174,7 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+# Public folder
+public
+
 # End of https://www.gitignore.io/api/node,vuejs,visualstudiocode,linux,macos,windows
