--- a/package.json
+++ b/package.json
@@ -6,8 +6,14 @@
   "scripts": {
     "postinstall": "npm install --prefix server && npm install --prefix client && npm run build --prefix client"
   },
-  "engines" : {
-    "npm" : "9.x",
+  "engines": {
+    "npm": "9.x",
     "node": "18.x"
+  },
+  "dependencies": {
+    "filepond-plugin-file-encode": "^2.1.11",
+    "filepond-plugin-file-validate-type": "^1.2.8",
+    "filepond-plugin-image-preview": "^4.6.11",
+    "vue-filepond": "^7.0.4"
   }
 }
