--- a/server/.prettierrc
+++ b/server/.prettierrc
@@ -2,6 +2,8 @@
     "trailingComma": "none",
     "tabWidth": 2,
     "semi": false,
-    "singleQuote": true
+    "singleQuote": true,
+    "bracketSpacing": true,
+    "printWidth": 100
   }
   
